--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.12.2
+  cached_network_image: ^2.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
