--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,14 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.2
-  cached_network_image: ^2.5.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-
+  http: any
+  cached_network_image: ^2.5.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
