--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   http: any
   cached_network_image: ^2.5.0
+  webview_flutter: ^1.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
